# rust_practices

./: .gitignore  README.md
lcat/: Cargo.toml  README.md
lcat/src/: cli.rs  liner.rs  main.rs
lcat/src/liner/: lined.rs  lined_with_noblank.rs  plain.rs  squeeze.rs
lgrep/: Cargo.toml  README.md
lgrep/src/: main.rs
lnow/: Cargo.toml  README.md
ltac/: Cargo.toml
ltac/src/: main.rs
ltee/: Cargo.toml
luniq/: Cargo.toml  README.md
luniq/src/: ioutil.rs  main.rs
now/: Cargo.toml
now/src/: main.rs
tac/: Cargo.toml
tac/src/: decorator.rs
tee/: Cargo.toml  README.md
tee/src/: main.rs
uniq/: Cargo.toml
uniq/src/: uniqer.rs
