[package]
name = "uniq"
version = "0.1.0"
authors = ["Haruaki Tamada <tamada.f@ke.cafebabe.jp>"]
edition = "2021"
description = "Delete duplicated lines."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	clap = { version = "4.5.4", features = ["derive"] }
